fix some bugs🎉