@@ -232,15 +232,15 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>19</source>
+                    <target>19</target>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>io.github.fvarrui</groupId>
                 <artifactId>javapackager</artifactId>
-                <version>1.7.0</version>
+                <version>1.7.5</version>
                 <configuration>
                     <bundleJre>true</bundleJre>
 <!--                    <mainClass>cn.lichenfei.javapackage.Start</mainClass>-->
@@ -259,7 +259,8 @@
                             <!--生成压缩包-->
                             <createZipball>true</createZipball>
                             <!--vm参数-->
-                            <vmArgs>-XX:+UseZGC</vmArgs>
+                            <!--                            <vmArgs>-XX:+UseZGC</vmArgs>-->
+                            <vmArgs>-XX:+UseZGC -XX:+ZGenerational</vmArgs>
                             <winConfig>
                                 <!--https://github.com/fvarrui/JavaPackager/blob/master/docs/windows-specific-properties.md-->
                                 <icoFile>${project.basedir}/src/main/resources/img/B.ico</icoFile>
